# scout-intel-mcp

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  server.json
.github/workflows/: mcp-publish.yml
.well-known/mcp/: server-card.json
src/scout_mcp/: __init__.py  auth.py  cache.py  config.py  mcp_server.py  models.py
src/scout_mcp/sources/: __init__.py  crunchbase.py  github_api.py  news_api.py  opencorporates.py  search.py  social.py  web_scraper.py  wikipedia_src.py
src/scout_mcp/tools/: __init__.py  batch.py  company.py  competitors.py  market.py  person.py  product.py  trends.py
